# MOBO_Ingeniero_IA_Jr_Enrique_Rios_Flores

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  MOBO_Enrique_Rios_Flores.json  README.md  docker-compose.yml  main.py  pyproject.toml  tarea_5.json
data/rag/: ADMIN_EstrategiaComercial.txt  ALL_VisionGeneralMOBO.txt  DEV_EspecificacionesTecnicasMOBO.txt
docs/: HR_SalariosMOBO.txt
scripts/: setup_mongodb.py
src/clients/: README.md
src/clients/ai_clients/: claude_client.py  client_factory.py  ia_client_interface.py  openai_client.py  openrouter_client.py
src/clients/faiss/: __init__.py  faiss_client.py
src/clients/mcp/: mcp_client.py
src/clients/mongodb/: mongodb_client.py
src/config/: settings.py
src/services/FAISS/: Dockerfile  README.md  __init__.py  load_embeddings.py  main.py  models.py  requirements.txt
src/services/database/: Dockerfile  README.md  main.py  requirements.txt
src/services/database/models/: document_model.py  user_model.py
src/services/mcp/: Dockerfile  README.md  main.py  requirements.txt
tests/: test_ai_clients.py  test_faiss_client.py  test_mcp_client.py  test_mongodb_client.py  view_mongo_inf.py
