[project]
name = "mobo-ingeniero-ia-jr-enrique-rios-flores"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.121.3",
    "mcp>=1.22.0",
    "openai>=1.0.0",
    "pymongo>=4.15.4",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "requests>=2.32.5",
    "sentence-transformers>=2.2.0",
    "uvicorn[standard]>=0.23.0",
]
